Change little html and css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="cat-cards">
                 <div class="cat-card">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4d/Cat_November_2010-1a.jpg/300px-Cat_November_2010-1a.jpg" alt="Orange Cat">
-                    <h3>Fluffy</h3>
+                    <h3>Suru</h3>
                     <p>A friendly orange cat who loves to play</p>
                 </div>
 
