Javascript File Created

--- a/index.html
+++ b/index.html
@@ -68,5 +68,6 @@
     <div class="footer">
         <p>&copy; 2024 Cat World. Made with love for cats!</p>
     </div>
+    <script src = "script.js"></script>
 </body>
 </html>
